--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "tw:init": "tailwindcss init",
     "seed": "ts-node --esm prisma/seed.ts",
     "dev": "next dev",
     "build": "prisma generate && next build",
@@ -32,14 +33,13 @@
     "transliteration": "^2.3.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.17.47",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "esbuild-register": "^3.6.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.3.0",
