--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "seed": "ts-node --esm prisma/seed.ts",
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "postbuild": "next-sitemap",
+
     "start": "next start",
     "lint": "next lint"
   },
@@ -39,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
